gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: avi-lb
  namespace: demo
spec:
  controllerName: "ako.vmware.com/avi-lb"
