gateway-vault.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    cert-manager.io/issuer: vault-issuer2
    cert-manager.io/common-name: gw1.k8s.fqdn.nl
    cert-manager.io/renew-before: "24h"
  name: chris-tkg-gateway 
  namespace: demo 
spec:
  gatewayClassName: avi-lb
  listeners:
  - name: foo-https
    protocol: HTTPS
    port: 443
    hostname: "gw1.k8s.fqdn.nl"
    tls:
      certificateRefs:
      - kind: Secret
        group: ""
        name: gw1.k8s.fqdn.nl
